# amazon-redshift-python-driver

./: .gitchangelog.rc  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  README.rst  THIRD_PARTY_LICENSES  build.sh  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: main.yml  python-package.yml
redshift_connector/: CredentialsHolder.py  RedshiftProperty.py  __init__.py  _version.py  config.py  core.py  credentials_holder.py  cursor.py  error.py  iamHelper.py  iam_helper.py  idp_auth_helper.py  interval.py  metadataAPIHelper.py  metadataAPIPostProcessing.py  metadataAPIPostProcessor.py  metadataServerAPIHelper.py  metadataServerProxy.py  native_plugin_helper.py  objects.py  pg_types.py  redshift_property.py  version.py
redshift_connector/auth/: aws_credentials_provider.py
redshift_connector/plugin/: AdfsCredentialsProvider.py  AzureCredentialsProvider.py  BrowserAzureCredentialsProvider.py  BrowserSamlCredentialsProvider.py  CredentialProviderConstants.py  OktaCredentialsProvider.py  PingCredentialsProvider.py  SamlCredentialsProvider.py  __init__.py  adfs_credentials_provider.py  azure_credentials_provider.py  azure_utils.py  browser_azure_credentials_provider.py  browser_azure_oauth2_credentials_provider.py  browser_idc_auth_plugin.py  browser_saml_credentials_provider.py  common_credentials_provider.py  i_native_plugin.py  i_plugin.py  idp_credentials_provider.py  idp_token_auth_plugin.py  jwt_credentials_provider.py  okta_credentials_provider.py  ping_credentials_provider.py  plugin_utils.py  saml_credentials_provider.py
redshift_connector/utils/: __init__.py  array_util.py  logging_utils.py  oids.py  sql_types.py  type_utils.py
test/: __init__.py  conftest.py
test/integration/: __init__.py  conftest.py  test_connection.py  test_cursor.py  test_dbapi20.py  test_idp_token_auth_integration.py  test_pandas.py  test_paramstyle.py  test_prepared_statements_cache.py  test_query.py  test_redshift_property.py  test_typeobjects.py  test_unsupported_datatypes.py
test/integration/datatype/: _generate_test_datatype_tables.py  test_datatypes.py  test_system_table_queries.py
test/integration/metadata/: _password_generator.py  metadata_test_utils.py  test_driver_discovery_version.py  test_list_catalog.py  test_metadataAPI.py  test_metadataAPIHelperServer.py  test_metadataAPI_functions.py  test_metadataAPI_keys.py  test_metadataAPI_pattern_matching.py  test_metadataAPI_privileges.py  test_metadataAPI_procedures.py  test_metadataAPI_special_character_handling.py  test_metadataAPI_special_character_handling_case_sensitive.py  test_metadataAPI_special_character_handling_standard_delimited_identifier_case_insensitive.py  test_metadataAPI_special_character_handling_standard_delimited_identifier_case_insensitive_with_pipe.py  test_metadataAPI_special_character_handling_standard_delimited_identifier_case_sensitive.py  test_metadataAPI_special_character_handling_standard_identifier.py  test_metadataAPI_sql_injection.py  test_server_api_show_command.py
test/integration/plugin/: conftest.py  test_azure_credentials_provider.py  test_credentials_providers.py  test_okta_credentials_provider.py
test/manual/: test_redshift_custom_domain.py  test_redshift_serverless.py
test/manual/auth/: test_aws_credentials.py  test_redshift_auth_profile.py
test/manual/plugin/: test_browser_credentials_provider.py
test/performance/: bulk_insert_data.csv  bulk_insert_performance.py  performance.py  protocol_perf_test.sql  protocol_performance.py  test.sql
test/unit/: __init__.py  test_array_util.py  test_connection.py  test_core.py  test_credentials_holder.py  test_cursor.py  test_dbapi20.py  test_driver_info.py  test_iam_helper.py  test_idp_auth_helper.py  test_import.py  test_logging_utils.py  test_metadataAPIHelper.py  test_metadataAPIPostProcessing.py  test_metadataAPIPostProcessor.py  test_metadataServerAPIHelper.py  test_metadataServerProxy.py  test_module.py  test_native_plugin_helper.py  test_paramstyle.py  test_redshift_property.py  test_sanitize_str.py  test_type_utils.py  test_typeobjects.py
test/unit/auth/: test_aws_credentials_provider.py
test/unit/datatype/: test_data_in.py  test_oids.py  test_sql_types.py
test/unit/helpers/: __init__.py  idp_helpers.py
test/unit/mocks/: __init__.py  mock_external_credential_provider.py  mock_socket.py
test/unit/plugin/: test_adfs_credentials_provider.py  test_azure_common.py  test_azure_credentials_provider.py  test_azure_oauth2_credentials_provider.py  test_browser_azure_credentials_provider.py  test_browser_idc_auth_plugin.py  test_browser_saml_credentials_provider.py  test_credentials_providers.py  test_idp_token_auth_plugin.py  test_jwt_credentials_provider.py  test_okta_credentials_provider.py  test_plugin_inheritance.py  test_saml_credentials_provider.py
test/unit/plugin/data/: browser_azure_data.py  mock_adfs_saml_response.html  mock_adfs_sign_in.html  saml_response.xml  saml_response_data.py
test/utils/: __init__.py  decorators.py
tutorials/: 001 - Connecting to Amazon Redshift.ipynb  002 - Data Science Library Integrations.ipynb  003 - Amazon Redshift Feature Support.ipynb  004 - Amazon Redshift Datatypes.ipynb
tutorials/.ipynb_checkpoints/: 001 - Connecting to Amazon Redshift-checkpoint.ipynb
